# egui-todo-app

./: .gitignore  Cargo.toml  README.md  app-resources.rc  build.rs
src/: app_data.rs  gif_handler.rs  main.rs  timer.rs
src/ui/: calendar.rs  central_panel.rs  mod.rs  rewards.rs  stats.rs  todo_window.rs
