[package]
name = "alarm"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.30.0"
rodio = { version = "0.17.3", features = ["symphonia-mp3"] }
gif = "0.12.0"
rfd = "0.14.1"
tray-icon = "0.21.0"
ico = "0.1.0"
chrono = { version = "0.4.38", features = ["serde"] } 
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"

[build-dependencies]
embed-resource = "2.4"